# space-dodgems

./: .clang-tidy  .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml  workspace.code-workspace
client/: index.html  index.js  input.js  main.css  main.js
nginx/: default.conf.template
server/: .dockerignore  CMakeLists.txt  Dockerfile  build.sh  config.h  listener.cpp  listener.h  main.cpp  player.cpp  player.h  scoreboard.cpp  scoreboard.h  session.cpp  session.h  world.cpp  world.h
server/cmake/: conan.cmake
